--- a/Home.html
+++ b/Home.html
@@ -69,5 +69,14 @@
         </div>
     </div>
 </header>
+<div class="top-slider">
+    <div class="slider-content">
+        <img src="slider-image1.jpg" width="100%">
+        <div class="slider-information">
+
+
+        </div>
+    </div>
+</div>
 </body>
 </html>
