--- a/Home.html
+++ b/Home.html
@@ -23,7 +23,7 @@
                 <form>
                     <input type="text">
                     <span>.</span>
-                    <input type="image" name="picture" src="search.png">
+                    <input type="image" name="picture" src="images/search.png">
                 </form>
             </div>
         </div>
@@ -53,14 +53,14 @@
 
             </div>
             <div class="basket">
-                <div class="image"><img src="basket.png"></div>
+                <div class="image"><img src="images/basket.png"></div>
                 <div class="basket-number">
                     <p>0</p>
                 </div>
             </div>
             <div class="star">
                 <div class="image">
-                    <img src="star.png">
+                    <img src="images/star.png">
                 </div>
                 <div class="star-number">
                     <p>30</p>
@@ -71,10 +71,73 @@
 </header>
 <div class="top-slider">
     <div class="slider-content">
-        <img src="slider-image1.jpg" width="100%">
+        <img class="slider-image" src="images/slider-image1.jpg" width="100%">
         <div class="slider-information">
+        <div class="information">
+            <div class="prise">
+                <span>$145.99</span>
+            </div>
+            <div class="clear"></div>
+            <span class="slider-name">Pink Shoes</span>
+            <span class="slider-name">2013 Collection</span>
+            <span class="description">Nunc non fermentum nunc. Sed ut ante eget leo tempor consequat sit amet eu orci. Donec dignissim dolor eget.</span>
+            <div class="information-panel">
+                <a  class="icons" href="http://panel">
+                    <img src="images/icon_1.png">
+                </a>
+                <a class="icons" href="http://panel">
+                    <img src="images/icon_2.png">
+                </a>
+                <a class="icons" href="http://panel">
+                    <img src="images/icon_3.png">
+                </a>
+                <a class="icons"  href="http://panel">
+                    <img src="images/icon_4.png">
+                </a>
+            </div>
+        </div>
 
-
+        </div>
+    </div>
+</div>
+<div class="slider-panel">
+    <div class="slider">
+        <div class="slider-cell">
+            <div class="slider-bar">
+                <div class="slider-bar-active"></div>
+            </div>
+            <div class="slider-text">
+                <span><h4>Pink Shoes</h4></span>
+                <span><p>Now af $145.99</p></span>
+            </div>
+        </div>
+        <div class="slider-cell">
+            <div class="slider-bar"></div>
+            <div class="slider-text">
+                <span><h4>Anna Field</h4></span>
+                <span><p>Limited Edition</p></span>
+            </div>
+        </div>
+        <div class="slider-cell">
+            <div class="slider-bar"></div>
+            <div class="slider-text">
+                <span><h4>Prada</h4></span>
+                <span><p>Summer is coming</p></span>
+            </div>
+        </div>
+        <div class="slider-cell">
+            <div class="slider-bar"></div>
+            <div class="slider-text">
+                <span><h4>Casadei</h4></span>
+                <span><p>All Colors available</p></span>
+            </div>
+        </div>
+        <div class="slider-cell">
+            <div class="slider-bar"></div>
+            <div class="slider-text">
+                <span><h4>Mellow Yellow</h4>
+                <p>Free delivery</p></span>
+            </div>
         </div>
     </div>
 </div>
