--- a/Home.html
+++ b/Home.html
@@ -141,5 +141,27 @@
         </div>
     </div>
 </div>
+<div class="special-offers-panel">
+    <div class="wrap">
+            <div class="special-offers-item">
+                <img src="images/img1.jpg" height="180" align="middle" alt=""/>
+                <div class="special-offers-text">
+                    <h4>ON SALE</h4>
+                </div>
+            </div>
+            <div class="special-offers-item">
+                <img src="images/img2.jpg" height="180" align="middle" alt=""/>
+                <div class="special-offers-text">
+                    <h4>SPESIAL OFFERS</h4>
+                </div>
+            </div>
+            <div class="special-offers-item">
+                <img src="images/img3.jpg" height="180" align="middle" alt=""/>
+                <div class="special-offers-text">
+                    <h4>MUST HAVE</h4>
+                </div>
+            </div>
+    </div>
+</div>
 </body>
 </html>
