--- a/Home.html
+++ b/Home.html
@@ -55,7 +55,7 @@
             <div class="basket">
                 <div class="image"><img src="images/basket.png"></div>
                 <div class="basket-number">
-                    <p>0</p>
+                    <a href="buy"><p>0</p></a>
                 </div>
             </div>
             <div class="star">
@@ -63,7 +63,7 @@
                     <img src="images/star.png">
                 </div>
                 <div class="star-number">
-                    <p>30</p>
+                    <a href="favorite"><p>30</p></a>
                 </div>
             </div>
         </div>
@@ -72,30 +72,32 @@
 <div class="top-slider">
     <div class="slider-content">
         <img class="slider-image" src="images/slider-image1.jpg" width="100%">
+
         <div class="slider-information">
-        <div class="information">
-            <div class="prise">
-                <span>$145.99</span>
+            <div class="information">
+                <div class="prise">
+                    <span>$145.99</span>
+                </div>
+                <div class="clear"></div>
+                <span class="slider-name">Pink Shoes</span>
+                <span class="slider-name">2013 Collection</span>
+                <span class="description">Nunc non fermentum nunc. Sed ut ante eget leo tempor consequat sit amet eu orci. Donec dignissim dolor eget.</span>
+
+                <div class="information-panel">
+                    <a class="icons" href="http://panel">
+                        <img src="images/icon_1.png">
+                    </a>
+                    <a class="icons" href="http://panel">
+                        <img src="images/icon_2.png">
+                    </a>
+                    <a class="icons" href="http://panel">
+                        <img src="images/icon_3.png">
+                    </a>
+                    <a class="icons" href="http://panel">
+                        <img src="images/icon_4.png">
+                    </a>
+                </div>
             </div>
-            <div class="clear"></div>
-            <span class="slider-name">Pink Shoes</span>
-            <span class="slider-name">2013 Collection</span>
-            <span class="description">Nunc non fermentum nunc. Sed ut ante eget leo tempor consequat sit amet eu orci. Donec dignissim dolor eget.</span>
-            <div class="information-panel">
-                <a  class="icons" href="http://panel">
-                    <img src="images/icon_1.png">
-                </a>
-                <a class="icons" href="http://panel">
-                    <img src="images/icon_2.png">
-                </a>
-                <a class="icons" href="http://panel">
-                    <img src="images/icon_3.png">
-                </a>
-                <a class="icons"  href="http://panel">
-                    <img src="images/icon_4.png">
-                </a>
-            </div>
-        </div>
 
         </div>
     </div>
@@ -143,25 +145,140 @@
 </div>
 <div class="special-offers-panel">
     <div class="wrap">
-            <div class="special-offers-item">
-                <img src="images/img1.jpg" height="180" align="middle" alt=""/>
-                <div class="special-offers-text">
-                    <h4>ON SALE</h4>
-                </div>
+        <div class="special-offers-item">
+            <img src="images/img1.jpg" height="180" align="middle" alt=""/>
+
+            <div class="special-offers-text">
+                <a href=""><h4>ON SALE</h4></a>
             </div>
-            <div class="special-offers-item">
-                <img src="images/img2.jpg" height="180" align="middle" alt=""/>
-                <div class="special-offers-text">
-                    <h4>SPESIAL OFFERS</h4>
-                </div>
+        </div>
+        <div class="special-offers-item">
+            <img src="images/img2.jpg" height="180" align="middle" alt=""/>
+
+            <div class="special-offers-text">
+                <a href=""><h4>SPESIAL OFFERS</h4></a>
             </div>
-            <div class="special-offers-item">
-                <img src="images/img3.jpg" height="180" align="middle" alt=""/>
-                <div class="special-offers-text">
-                    <h4>MUST HAVE</h4>
-                </div>
+        </div>
+        <div class="special-offers-item">
+            <img src="images/img3.jpg" height="180" align="middle" alt=""/>
+
+            <div class="special-offers-text">
+                <a href=""><h4>MUST HAVE</h4></a>
             </div>
+        </div>
     </div>
+</div>
+<div class="central-panel">
+    <div class="wrap">
+        <span class="central-panel-text">New arrivals on FooseShoes
+            <div class="show-all">
+                <a href=""><span>Show All</span></a>
+            </div>
+        </span>
+
+        <div class="clear"></div>
+        <div class="itemcell">
+            <img src="images/pic1.jpg" alt=""/>
+
+            <div class="itemsell-panel">
+                <a href="">
+                    <div class="itemsell-prise">
+                        <span>$145.99</span>
+                    </div>
+                    <span class="itemsell-panel-text">Even&Odd</span></a>
+
+            </div>
+        </div>
+        <div class="itemcell">
+            <div class="onsale">
+                <span>ON SALE!</span>
+            </div>
+            <img src="images/pic2.jpg" alt=""/>
+
+            <div class="itemsell-panel">
+                <a href="">
+                    <div class="itemsell-prise">
+                        <span>$145.99</span>
+                    </div>
+                    <span class="itemsell-panel-text">Even&Odd</span></a>
+
+            </div>
+        </div>
+        <div class="itemcell">
+            <img src="images/pic3.jpg" alt=""/>
+
+            <div class="itemsell-panel">
+                <a href="">
+                    <div class="itemsell-prise">
+                        <span>$145.99</span>
+                    </div>
+                    <span class="itemsell-panel-text">Buffalo Decollete</span></a>
+
+            </div>
+        </div>
+
+        <span class="central-panel-text">Best sellers of the month
+            <div class="show-all">
+                <a href=""><span>Show All</span></a>
+            </div>
+        </span>
+
+        <div class="itemcell">
+            <img src="images/pic4.jpg" alt=""/>
+
+            <div class="itemsell-panel">
+
+                <div class="itemsell-prise">
+                    <span>$145.99</span>
+                </div>
+                    <span class="itemsell-panel-text">
+                        <div class="information-panel">
+                            <a class="icons" href="http://panel">
+                                <img src="images/icon_1.png">
+                            </a>
+                            <a class="icons" href="http://panel">
+                                <img src="images/icon_2.png">
+                            </a>
+                            <a class="icons" href="http://panel">
+                                <img src="images/icon_3.png">
+                            </a>
+                            <a class="icons" href="http://panel">
+                                <img src="images/icon_4.png">
+                            </a>
+                        </div>
+                    </span>
+
+            </div>
+        </div>
+        <div class="itemcell">
+            <img src="images/pic5.jpg" alt=""/>
+
+            <div class="itemsell-panel">
+                <a href="">
+                    <div class="itemsell-prise">
+                        <span>$145.99</span>
+                    </div>
+                    <span class="itemsell-panel-text">Even&Odd</span></a>
+
+            </div>
+        </div>
+        <div class="itemcell">
+            <div class="oos">
+                <span>OUT OF <br/>STOCK</span>
+            </div>
+            <img src="images/pic6.jpg" alt=""/>
+
+            <div class="itemsell-panel">
+                <a href="">
+                    <div class="itemsell-prise">
+                        <span>$145.99</span>
+                    </div>
+                    <span class="itemsell-panel-text">Buffalo Decollete</span></a>
+
+            </div>
+        </div>
+    </div>
+
 </div>
 </body>
 </html>
