--- a/Home.html
+++ b/Home.html
@@ -223,6 +223,8 @@
             </div>
         </span>
 
+        <div class="clear"></div>
+
         <div class="itemcell">
             <img src="images/pic4.jpg" alt=""/>
 
@@ -277,8 +279,82 @@
 
             </div>
         </div>
+        <div class="central-footer">
+            <div class="central-footer-cell-left">
+                <div class="left-part">
+                    <span class="central-footer-cell-ahead">FREE SHIPPING</span>
+
+                    <div class="clean"></div>
+                    <span class="central-footer-cell-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid architecto, aspernatur at aut beatae consectetur dicta fugiat id illo laudantium, maxime nesciunt pariatur, praesentium quidem ratione sed sint! Distinctio, ut!</span>
+                </div>
+                <div class="right-part">
+                    <span class="central-footer-cell-ahead">TESTIMONIALS</span>
+
+                    <div class="clean"></div>
+                    <span class="central-footer-cell-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, accusantium ad alias beatae dolor ea eligendi enim exercitationem facere fugit incidunt labore minima mollitia natus omnis rerum ullam velit, voluptas!</span>
+                </div>
+            </div>
+            <div class="central-footer-cell-right">
+                <div class="central-footer-right-cell">
+                    <span class="central-footer-cell-ahead">
+                        BLOG NEWS
+                    </span>
+
+                    <div class="clean"></div>
+                    <div class="blog-line-news">
+                        <div class="blog-date">
+                            <div class="blog-date-text">APR 01</div>
+                        </div>
+                        <div class="blog-line-content">
+                            <span class="blog-line-content-ahead"><a href="">Nice & clean. The best for you
+                                blog!</a></span>
+                            <span class="blog-line-content-text">Vivamus metus turpis,bibendum vitae euismod vel, vulputate vel</span>
+                        </div>
+                    </div>
+                    <div class="blog-line-news">
+                        <div class="blog-date">
+                            <div class="blog-date-text">APR 01</div>
+                        </div>
+                        <div class="blog-line-content">
+                            <span class="blog-line-content-ahead"><a href="">What an Ecommerce theme!</a></span>
+                            <span class="blog-line-content-text">Vulputate vel nibh. Class aptent taciti sociosqu ad litora</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
 </div>
+<footer>
+    <div class="footer-first">
+        <div class="wrap">
+            <div class="footer-widget-panel">
+                <div class="footer-widget-cell">
+                    <span class="widget-ahead">TEXT WIDGET</span>
+                    <div class="clear"></div>
+                    <span class="widget-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos dolor excepturi illum iure iusto labore laboriosam nulla officiis ratione veritatis. Eos error ipsa molestias mollitia qui, quia soluta vel voluptatibus.</span>
+                </div>
+                <div class="footer-widget-cell">
+                    <span class="widget-ahead">TWITTER WIDGET</span>
+                    <div class="clear"></div>
+                    <span class="widget-text"><span class="twitter-account">@ericafustero</span> Why thank you. Your work looks awesome be the way! <span class="twitter-account">@treemelody</span></span>
+                    <span class="twitter-date">19 days ago</span>
+                    <span class="widget-text"><span class="twitter-account">@roymarvelous</span>You can seek a refund through TF if not advertised - but it is :) </span>
+                    <span class="twitter-date">21 days ago</span>
+                </div>
+
+                <div class="footer-widget-cell">
+                    <span class="widget-ahead">FLICKR WIDGET</span>
+                    <div class="clear"></div>
+                    <div class="flickr-img">
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</footer>
 </body>
 </html>
