--- a/Home.html
+++ b/Home.html
@@ -21,7 +21,7 @@
             </div>
             <div class="search">
                 <form>
-                    <input type="text">
+                    <input class="input-box" type="text">
                     <span>.</span>
                     <input type="image" name="picture" src="images/search.png">
                 </form>
@@ -332,13 +332,16 @@
             <div class="footer-widget-panel">
                 <div class="footer-widget-cell">
                     <span class="widget-ahead">TEXT WIDGET</span>
+
                     <div class="clear"></div>
                     <span class="widget-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos dolor excepturi illum iure iusto labore laboriosam nulla officiis ratione veritatis. Eos error ipsa molestias mollitia qui, quia soluta vel voluptatibus.</span>
                 </div>
                 <div class="footer-widget-cell">
                     <span class="widget-ahead">TWITTER WIDGET</span>
+
                     <div class="clear"></div>
-                    <span class="widget-text"><span class="twitter-account">@ericafustero</span> Why thank you. Your work looks awesome be the way! <span class="twitter-account">@treemelody</span></span>
+                    <span class="widget-text"><span class="twitter-account">@ericafustero</span> Why thank you. Your work looks awesome be the way! <span
+                            class="twitter-account">@treemelody</span></span>
                     <span class="twitter-date">19 days ago</span>
                     <span class="widget-text"><span class="twitter-account">@roymarvelous</span>You can seek a refund through TF if not advertised - but it is :) </span>
                     <span class="twitter-date">21 days ago</span>
@@ -346,15 +349,75 @@
 
                 <div class="footer-widget-cell">
                     <span class="widget-ahead">FLICKR WIDGET</span>
+
                     <div class="clear"></div>
                     <div class="flickr-img">
-                        
+                        <a href=""><img src="images/f_pic1.jpg" alt=""/></a>
+                    </div>
+                    <div class="flickr-img">
+                        <a href=""><img src="images/f_pic2.jpg" alt=""/></a>
+                    </div>
+                    <div class="flickr-img">
+                        <a href=""><img src="images/f_pic3.jpg" alt=""/></a>
+                    </div>
+                    <div class="flickr-img">
+                        <a href=""><img src="images/f_pic4.jpg" alt=""/></a>
+                    </div>
+                    <div class="flickr-img">
+                        <a href=""><img src="images/f_pic5.jpg" alt=""/></a>
+                    </div>
+                    <div class="flickr-img">
+                        <a href=""><img src="images/f_pic6.jpg" alt=""/></a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
+    <div class="footer-second">
+        <div class="wrap">
+            <div class="footer-second-panel">
+                <div class="email-panel">
+                    <form action="someaction">
+                        <input class="input-box" type="text" value="Enter email for newsletter"/>
+                        <input class="submit-button" type="image" src="images/goto.png"/>
+                    </form>
+                </div>
+                <div class="social-panel">
+                    <div class="social-panel-icon">
+                        <a href="fasebook"><img src="images/icon1.png" alt=""/></a>
+                    </div>
+                    <div class="social-panel-icon">
+                        <a href="twitter"><img src="images/icon2.png" alt=""/></a>
+                    </div>
+                    <div class="social-panel-icon">
+                        <a href="google+"><img src="images/icon3.png" alt=""/></a>
+                    </div>
+                    <div class="social-panel-icon">
+                        <a href="linkenin"><img src="images/icon4.png" alt=""/></a>
+                    </div>
+                    <div class="social-panel-icon">
+                        <a href="uncknown"><img src="images/icon5.png" alt=""/></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </footer>
+<div class="third-footer">
+    <div class="footer-third-panel">
+        <div class="copyright">
+                    <span class="copyright-text">
+                        Copyright &copy; Vynogradov Evgeniy 2015.<br/>Designed by Vynogradov E.
+                    </span>
+        </div>
+        <div class="links">
+            <a href="Home">Home &frasl;</a>
+            <a href="Support">Support &frasl;</a>
+            <a href="">Terms and Conditions &frasl;</a>
+            <a href="Faqs">Faqs &frasl;</a>
+            <a href="contact">Contact us</a>
+        </div>
+    </div>
+</div>
 </body>
 </html>
